Db connectivity of components completed

--- a/src/app/meetingscheduler/meetingscheduler.component.html
+++ b/src/app/meetingscheduler/meetingscheduler.component.html
@@ -2,32 +2,57 @@
     <div class="col">
     </div>
     <div class="col">
-        <form style="padding-top: 70px;">
-            <div class="card">
-                <h4 class="text-center">Meeting Scheduler 📆</h4>
-                <div class="mb-3">
-                    <label for="formGroupExampleInput" class="form-label"> &nbsp;&nbsp;Meeting Topic</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter Topic">
-                </div>
-                <div class="mb-3">
-                    <label for="formGroupExampleInput" class="form-label"> &nbsp;&nbsp;Number of attendees</label>
-                    <input type="number" class="form-control" id="formGroupExampleInput"
-                        placeholder="Select number of participants">
-                </div>
-                <div class="mb-3">
-                    <label for="startTime" class="form-label"> &nbsp;&nbsp;Meeting Start Time</label>
-                    <br>
-                    &nbsp;&nbsp;<input type="datetime-local" id="startTime" name="startTime">
-                </div>
-                <div class="mb-3">
-                    <label for="endTime" class="form-label"> &nbsp;&nbsp;Meeting End Time</label>
-                    <br>
-                    &nbsp;&nbsp;<input type="datetime-local" id="endTime" name="endTime">
-                </div>
-                <button type="submit" class="btn btn-primary">Schedule</button>
-
+        <div class="card">
+            <h4 class="text-center">Meeting Scheduler 📆</h4>
+            <div class="mb-3">
+                <label for="formGroupExampleInput" class="form-label"> &nbsp;&nbsp;Meeting Topic</label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter Topic"
+                    [(ngModel)]="topic">
             </div>
-        </form>
+            <div class="mb-3">
+                <label for="formGroupExampleInput" class="form-label"> &nbsp;&nbsp;Number of attendees</label>
+                <input type="text" class="form-control" id="formGroupExampleInput"
+                    placeholder="Select number of participants" [(ngModel)]="attendeescount">
+            </div>
+            <div class="mb-3">
+                <label for="startTime" class="form-label"> &nbsp;&nbsp;Meeting Start Time</label>
+                <br>
+                &nbsp;&nbsp;<input type="datetime-local" id="startTime" name="startTime" [(ngModel)]="stime">
+            </div>
+            <div class="mb-3">
+                <label for="endTime" class="form-label"> &nbsp;&nbsp;Meeting End Time</label>
+                <br>
+                &nbsp;&nbsp;<input type="datetime-local" id="endTime" name="endTime" [(ngModel)]="etime">
+            </div>
+            <button type="submit" class="btn btn-primary" (click)="scheduleMeeting()">Schedule</button>
+        </div>
+        <hr>
+        <hr>
+        <div>
+            <button type="submit" class="btn btn-primary" (click)="displayAllMeetings()">-------------------View All
+                Scheduled
+                Meetings----------------------</button>
+        </div>
+        <hr>
+        <table border="5" style="width:100%" class="table">
+            <tbody>
+                <tr border="2">
+                    <td>Topic Name</td>
+                    <td>Number of participants</td>
+                    <td>Start Time</td>
+                    <td>End Time</td>
+                </tr>
+            </tbody>
+            <tbody>
+                <tr *ngFor="let meeting of meetings">
+                    <td>{{meeting.topic}}</td>
+                    <td>{{meeting.attendeescount}}</td>
+                    <td>{{meeting.stime}}</td>
+                    <td>{{meeting.etime}}</td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
     <div class="col">
     </div>
