--- a/src/app/portal/portal.component.html
+++ b/src/app/portal/portal.component.html
@@ -6,7 +6,7 @@
     <div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarNav" style="background-color: #17c714;">
+                <div class="collapse navbar-collapse" id="navbarNav" style="background-color: #7cc97a;">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/login">Login |</a>
